--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,71 @@
 /* You can add global styles to this file, and also import other style files */
+h1,
+h2 {
+  font-family: 'Gochi Hand', cursive;
+}
+
+body {
+  font-family: 'Overpass', sans-serif;
+}
+
+.selected {
+  font-weight: bold;
+  background-color: #fff;
+  color: #000;
+}
+
+a,
+a:hover {
+  text-decoration: none;
+}
+
+.filter {
+  min-width: 33%
+}
+
+.chara .icons {
+  opacity: 0;
+  transition: .6s;
+  z-index: 99;
+}
+
+.chara:hover .icons {
+  opacity: 1;
+}
+
+.chara .icons button {
+  margin-top: 10px;
+  transition: .6s;
+}
+
+.chara:hover .icons button {
+  margin-top: 0px;
+}
+
+.chara:hover img.head {
+  -webkit-filter: blur(5px);
+  /* Safari 6.0 - 9.0 */
+  filter: blur(5px);
+}
+
+.chara img.head {
+  z-index: -2;
+  transition: .6s;
+}
+
+.chara .stroke {
+  position: inline-block;
+}
+
+
+.chara .stroke:after {
+  content: attr(title);
+  position: absolute;
+  -webkit-text-stroke: 0.2em white;
+  z-index: -1;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  text-align: center;
+}
