--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ng-container *ngFor="let troll of trolls" >
   <![CDATA[
-<div class="item p-0 col col-6 col-md-4 col-xl-2 chara {{troll.categories}}" style="display:table-cell;" data-same-height="troll" >
+<div class="item p-0 my-2 col col-6 col-md-4 col-xl-2 chara {{troll.categories}}" style="display:table-cell;" data-same-height="troll" >
   <table class="w-100 h-100">
     <tr>
       <td class="align-middle text-center h-100" style="vertical-align: middle;">
